# atelier

./: .gitignore  CHANGELOG.md  HARNESSES.md  LICENSE  README.md  SKILL.md  _gt_capture.mjs  action.yml  marketplace.json  pyproject.toml
.claude-plugin/: plugin.json
assets/engines/: canvas.jsx  narration.jsx  sprites.jsx
assets/frames/: android.jsx
assets/media/: README.md
atelier/: __init__.py  __main__.py  _bootstrap.py
commands/: check.md  design-md.md  migrate.md  preview.md  refine.md  review.md  variants.md
hooks/: atelier-collision-gate.py  hooks.json
references/: design-laws.md  design-md-spec.md  design-philosophy.md
references/capabilities/: 3d-hero.md  animations.md  content.md  core-assets.md  council.md  data-viz-craft.md  defensive-css.md  forms-craft.md  i18n-rtl.md  landing-craft.md  layering.md  live-mode.md  motion-spec.md  preview.md  prototypes.md  refine.md  responsive.md  review.md  scroll-motion.md  slides.md  svg.md  typography.md  variants.md
references/knowledge/: SOURCE.md  brand-exemplars.csv  charts.csv  defensive-css.csv  fonts-catalog.csv  palettes.csv  products.csv  (+4 more)
scripts/: a11y_check.py  add-music.sh  atelier_config.py  audit_contrast.py  build_dist.py  build_styleguide.py  capture_deep.mjs  census.py  chart_legibility.mjs  check.py  check_offline.py  check_rtl.py  check_rules.py  cold_start_ledger.py  context.py  contract.py  contract_integrity.py  convert-formats.sh  core_assets.py  critique_ledger.py  csp_patch.py  design_report.py  detect_server.sh  diff_screens.mjs  edit_apply.py  electron-capture.cjs  export_native.py  export_pdf.mjs  export_tokens.py  export_video.sh  extract_deck.mjs  focus_order.mjs  free_port.sh  import_reference.py  lint_design.py  live_accept.py  live_carbonize.py  live_config.py  live_detect.py  live_insert.py  (+24 more)
templates/: DESIGN.md.template
tests/: conftest.py  run.py  test_a11y_check.py  test_apca.py  test_atelier_config.py  test_audit_lint.py  test_build_dist.py  test_capture_deep.py  test_check.py  test_check_offline.py  test_check_url.py  test_cli.py  test_cold_start_ledger.py  test_commands.py  test_context.py  test_contract.py  test_contract_integrity.py  test_contrast_table.py  test_core_assets.py  test_critique_ledger.py  test_csp_patch.py  test_defensive_css.py  test_design_report.py  test_edit_apply.py  test_export_native.py  test_export_tokens.py  test_export_video.py  test_fabricated_proof.py  test_focus_order.py  test_fonts_catalog.py  test_hook.py  test_installed_layout.py  test_kb_breadth.py  test_kb_palettes.py  test_known_good.py  test_layering_depth.py  test_live_accept.py  test_live_carbonize.py  test_live_config.py  test_live_detect.py  (+27 more)
(+55 files in other folders)
